--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,3 +104,4 @@ commit_message = "chore(release): {version} [skip ci]"
 branch = "main"
 upload_to_pypi = false
 upload_to_release = true
+build_command= "uv build && uv publish"
