--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	"postCreateCommand": "uv sync --all-extras --dev",
 	"mounts": [
 		"source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
-		"source=${localEnv:HOME}${localEnv:USERPROFILE:/},target=/home/vscode,type=bind,consistency=cached"
+		"source=${localEnv:HOME}${localEnv:USERPROFILE:/}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
 	],
 	"customizations": {
 		"vscode": {
