--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -114,11 +114,11 @@ repos:
           - types-waitress
           - types-xxhash
 
-  - repo: local
-    hooks:
-    -   id: pytest
-        name: Check pytest with coverage passes
-        entry: uv run pytest --cov-report html --cov=fast_clean tests
-        pass_filenames: false
-        language: system
-        types: [python]
+  # - repo: local
+  #   hooks:
+  #   -   id: pytest
+  #       name: Check pytest with coverage passes
+  #       entry: uv run pytest --cov-report html --cov=fast_clean tests
+  #       pass_filenames: false
+  #       language: system
+  #       types: [python]
