--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiokafka>=0.12.0",
     "aioprometheus>=23.12.0",
+    "alembic>=1.16.2",
     "cryptography>=44.0.1",
     "dishka>=1.6.0",
     "fastapi>=0.115.8",
