--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pydantic>=2.10.6",
     "pydantic-settings>=2.8.0",
     "pyyaml>=6.0.2",
-    "sentry-sdk>=2.32.0",
+    "sentry-sdk[fastapi]>=2.32.0",
     "snakecase>=1.0.1",
     "sqlalchemy-utils>=0.41.2",
     "sqlalchemy[asyncio]>=2.0.38",
@@ -107,5 +107,6 @@ version_toml = [
 ]
 commit_message = "chore(release): {version} [skip ci]"
 branch = "main"
-upload_to_pypi = false
+upload_to_pypi = true
 upload_to_release = true
+build_command = "uv build"
