--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,10 +38,12 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v6
         with:
+          version: latest
           enable-cache: true
           cache-dependency-glob: "uv.lock"
+          activate-environment: true
       - name: Install the project
         run: uv sync
       - name: Semantic Release
