--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,4 +109,4 @@ commit_message = "chore(release): {version} [skip ci]"
 branch = "main"
 upload_to_pypi = true
 upload_to_release = true
-build_command = "uv build"
+build_command = "pip install uv && uv build"
