--- a/pytest.ini
+++ b/pytest.ini
@@ -4,23 +4,23 @@ filterwarnings =
     ignore::DeprecationWarning
 
 env =
-    SECRET_KEY=wG063Km5IlmuDKFSyIils71xbDgXhpOh
-    REDIS_DSN=redis://localhost:6379/0
+    D:SECRET_KEY=wG063Km5IlmuDKFSyIils71xbDgXhpOh
+    D:REDIS_DSN=redis://localhost:6379/0
     # db
-    DB__PROVIDER=postgresql+psycopg_async
-    DB__HOST=localhost
-    DB__PORT=5432
-    DB__USER=postgres
-    DB__PASSWORD=postgres
-    DB__NAME=test
+    D:DB__PROVIDER=postgresql+psycopg_async
+    D:DB__HOST=localhost
+    D:DB__PORT=5432
+    D:DB__USER=postgres
+    D:DB__PASSWORD=postgres
+    D:DB__NAME=test
     # storage
-    STORAGE__S3__ENDPOINT_URL=http://localhost:9000
-    STORAGE__S3__ENDPOINT=localhost
-    STORAGE__S3__PORT=9000
-    STORAGE__S3__ACCESS_KEY=admin
-    STORAGE__S3__SECRET_KEY=12345678
-    STORAGE__S3__BUCKET=test
-    STORAGE__S3__SECURE=false
+    D:STORAGE__S3__SERVER_URL=http://localhost:9000
+    D:STORAGE__S3__ENDPOINT=localhost
+    D:STORAGE__S3__PORT=9000
+    D:STORAGE__S3__AWS_SECRET_ACCESS_KEY=12345678
+    D:STORAGE__S3__AWS_ACCESS_KEY_ID=admin
+    D:STORAGE__S3__BUCKET=test
+    D:STORAGE__S3__SECURE=false
     # kafka
-    KAFKA__BOOTSTRAP_SERVERS=localhost:9092
-    KAFKA__GROUP_ID=test-group-id
+    D:KAFKA__BOOTSTRAP_SERVERS=localhost:9092
+    D:KAFKA__GROUP_ID=test-group-id
