--- a/pytest.ini
+++ b/pytest.ini
@@ -5,17 +5,16 @@ filterwarnings =
 
 env =
     SECRET_KEY=wG063Km5IlmuDKFSyIils71xbDgXhpOh
-    REDIS_DSN=redis://localhost:6379/0
     # db
     DB__PROVIDER=postgresql+psycopg_async
-    DB__HOST=localhost
+    DB__HOST=postgres
     DB__PORT=5432
     DB__USER=postgres
-    DB__PASSWORD=postgres
+    DB__PASSWORD=12345678
     DB__NAME=test
     # storage
-    STORAGE__S3__ENDPOINT_URL=http://localhost:9000
-    STORAGE__S3__ENDPOINT=localhost
+    STORAGE__S3__ENDPOINT_URL=http://minio:9000
+    STORAGE__S3__ENDPOINT=minio
     STORAGE__S3__PORT=9000
     STORAGE__S3__ACCESS_KEY=admin
     STORAGE__S3__SECRET_KEY=12345678
@@ -24,3 +23,7 @@ env =
     # kafka
     KAFKA__BOOTSTRAP_SERVERS=localhost:9092
     KAFKA__GROUP_ID=test-group-id
+    # cache
+    CACHE__PROVIDER=redis
+    CACHE__PREFIX=fast-clean
+    CACHE__REDIS__DSN=redis://redis:6379/0
