--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,20 +3,29 @@
 {
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"dockerComposeFile": "../docker-compose.yaml",
-	"service": "devcontainer",
-	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
 	"features": {
-		"ghcr.io/va-h/devcontainers-features/uv:1": {}
+		"ghcr.io/jsburckhardt/devcontainer-features/uv:1": {},
+		"ghcr.io/va-h/devcontainers-features/uv:1": {},
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		"ghcr.io/dhoeric/features/act:1": {}
 	},
-	"postCreateCommand": "./.devcontainer/postCreateCommand.sh",
-	"forwardPorts": [8000, 5678],
+	"postCreateCommand": "uv sync --all-extras --dev",
+	"mounts": [
+		"source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
+		"source=${localEnv:HOME}${localEnv:USERPROFILE:/}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
+		"source=${localEnv:HOME}${localEnv:USERPROFILE:/}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
+	],
 	"customizations": {
 		"vscode": {
 			"settings": {
+				"python.defaultInterpreterPath": ".venv/bin/python",
 				"python.analysis.typeCheckingMode": "strict",
 				"python.testing.unittestEnabled": false,
-				"python.testing.pytestEnabled": true
+				"python.testing.pytestEnabled": true,
+				"python.analysis.diagnosticSeverityOverrides": {
+					"reportMissingTypeStubs": "none"
+				}
 			},
 			"extensions": [
 				"tamasfe.even-better-toml",
@@ -26,16 +35,12 @@
 				"ms-python.autopep8",
 				"ms-azuretools.vscode-docker",
 				"spmeesseman.vscode-taskexplorer",
-				"njpwerner.autodocstring",
-				"cweijan.dbclient-jdbc",
-				"cweijan.vscode-database-client2"
+				"njpwerner.autodocstring"
 			]
 		}
 	},
 	"remoteEnv": {
 		"UV_LINK_MODE": "copy",
-		"PYDEVD_DISABLE_FILE_VALIDATION": "1",
-		"WORKSPACE_ROOT": "/workspaces/${localWorkspaceFolderBasename}"
-	},
-	"shutdownAction": "stopCompose"
+		"PYDEVD_DISABLE_FILE_VALIDATION": "1"
+	}
 }
