--- a/tests/.env.example
+++ b/tests/.env.example
@@ -2,7 +2,7 @@
 # ---------- cache ----------
 CACHE__PROVIDER=in_memory
 CACHE__PREFIX=fast-clean
-CACHE__REDIS__DSN=redis://redis:6379/0
+CACHE__REDIS__DSN=redis://localhost:6379/0
 
 
 # ---------- postgres ----------
@@ -15,8 +15,8 @@ DB__NAME=test
 
 # ---------- storage ----------
 STORAGE__PROVIDER=s3
-STORAGE__S3__SERVER_URL=http://minio:9000
-STORAGE__S3__ENDPOINT_URL=minio
+STORAGE__S3__SERVER_URL=http://localhost:9000
+STORAGE__S3__ENDPOINT_URL=localhost
 STORAGE__S3__PORT=9000
 STORAGE__S3__ACCESS_KEY=admin
 STORAGE__S3__SECRET_KEY=12345678
@@ -24,5 +24,5 @@ STORAGE__S3__BUCKET=storage
 STORAGE__S3__SECURE=false
 
 # ---------- kafka ----------
-KAFKA__BOOTSTRAP_SERVERS=kafka:9092
+KAFKA__BOOTSTRAP_SERVERS=localhost:9092
 KAFKA__GROUP_ID=test-group-id
