fix: Semantic release

--- a/tests/.env.example
+++ b/tests/.env.example
@@ -23,6 +23,6 @@ STORAGE__S3__SECRET_KEY=12345678
 STORAGE__S3__BUCKET=storage
 STORAGE__S3__SECURE=false
 
-# ---------- kafka ----------
+# ---------- kafka ---------
 KAFKA__BOOTSTRAP_SERVERS=localhost:9092
 KAFKA__GROUP_ID=test-group-id
